# ICPP22-and-TKDE25

./: BTJ.cpp  CMakeLists.txt  NJ.cpp  README  TJ.cpp  WJ.cpp  main.h  preProcessing.cpp  utilities.cpp
